# ShaggysGameLib

./: .gitignore  CMakeLists.txt  audio.c  audio.h  base64.c  base64.h  collision.c  collision.h  draw.c  draw.h  engine.c  engine.h  framemap.c  framemap.h  heatmap.c  heatmap.h  helper.c  helper.h  json_tk.c  json_tk.h  kongfont.aseprite  kongfont.json  list.h  map.c  map.h  maptest.c  mk_data.pl  mk_scheme_sym.pl  scheme_helper.c  scheme_helper.h  sdl_helper.c  sdl_helper.h  shaggy_scheme.c  test.c  test.xm  text.c  text.h  tileset.c  tileset.h  tinyfont.aseprite  (+4 more)
contrib/: ibxm.c  json.c
contrib/SDL2_image-2.0.4/: CMakeLists.txt  IMG_png.c
contrib/libpng-1.6.37/: .CMakeLists.txt.un~  CMakeLists.txt  CMakeLists.txt~
contrib/lua-5.3.5/src/: CMakeLists.txt  luaconf.h
contrib/tinyscheme-1.41/: CMakeLists.txt  makefile  scheme-private.h  scheme.c  scheme.h
contrib/zlib-1.2.11/: .zlib.h.un~  zlib.h  zlib.h~
emscripten/: preload.js  template.html
examples/: CMakeLists.txt
toolchains/: windows.cmake
